tests/paczka1/small_fuzzy/43786022.err
Error in line 4: 92yIIF S884 65,2
Error in line 1: 2SXIjGPYD S884 79,1
